--- a/popup.css
+++ b/popup.css
@@ -3,31 +3,46 @@ body {
     width: 200px;
 }
 
+h1 {
+    font-size: 16px;
+}
+
 .problem {
-    background-color: lightcyan;
+    color: black;
+    background-color: #efefef;
     margin: auto;
-    border-radius: 10px;
-    display: flex;
-    border: 2px solid lightgrey;
+    border-radius: 6px;
     padding: 5px;
     text-decoration: none;
+    font-weight: 700;
+}
+
+#problemGeneration {
+    margin-bottom: 10px;
+}
+
+#generateButton {
+    cursor: pointer;
+}
+
+.problem {
+    display: flex;
     text-align: center;
-    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    visibility: hidden;
 }
 
 .problemId, .problemRating {
     width: 20%;
-    display: flex;
     align-items: center;
 }
 
-.problemRating {
-    background-image: url(./assets/logo.png);
-    background-size: 10px;
-    background-repeat: no-repeat;
-    background-position: left;
-    padding-left: 15px;
-    text-align: left;
+.problemRatingImg {
+    width: 10px;
+    height: 10px;
+    display: flex;
+    align-items: center;
 }
 
 .problemName {
@@ -35,4 +50,61 @@ body {
     word-wrap: break-word;
     margin-left: 10px;
     margin-right: 10px;
+}
+
+#loading {
+    position: absolute;
+    left: 45%;
+    width: 15px;
+    height: 15px;
+    border: 4px solid #efefef;
+    border-top: 4px solid gray;
+    border-radius: 100%;
+    margin: auto;
+    visibility: hidden;
+    animation: spin 1s infinite linear;
+}
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.sliders_control {
+    position: relative;
+    margin-top: 15px;
+    min-height: 15px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    pointer-events: all;
+    width: 12px;
+    height: 12px;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px #C6C6C6;
+    cursor: pointer;
+}
+  
+input[type=range]::-webkit-slider-thumb:hover {
+    background: #f7f7f7;
+}
+  
+input[type="range"] {
+    -webkit-appearance: none; 
+    appearance: none;
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    background-color: #C6C6C6;
+    pointer-events: none;
+}
+  
+#fromSlider {
+    height: 0;
+    z-index: 1;
 }
