--- a/popup.css
+++ b/popup.css
@@ -95,21 +95,22 @@ input[type=range]::-webkit-slider-thumb {
     cursor: pointer;
 }
   
-input[type=range]::-webkit-slider-thumb:hover {
-    background: #f7f7f7;
-}
-  
 input[type="range"] {
     -webkit-appearance: none; 
     appearance: none;
-    height: 2px;
+    height: 5px;
     width: 100%;
     position: absolute;
     background-color: #C6C6C6;
     pointer-events: none;
+    border-radius: 5px;
 }
   
 #fromSlider {
     height: 0;
     z-index: 1;
+}
+#fromSlider::-webkit-slider-thumb {
+    margin-top: 5px;
+    margin-left: -2px;
 }
